show unknown devices on main screen

--- a/BTKitTester/Resources/Plists/Info.plist
+++ b/BTKitTester/Resources/Plists/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Please allow bluetooth to enable app functionality</string>
 </dict>
 </plist>
